<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tauv_vision</name>
  <version>0.0.0</version>
  <description>Vision Stack for Tartan AUV</description>
  <maintainer email="nfrazier@andrew.cmu.edu">Nicolas Frazier</maintainer>
  <license>MIT</license>

  <exec_depend>tauv_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>